--- a/proyectoApp/src/app/app.component.html
+++ b/proyectoApp/src/app/app.component.html
@@ -18,4 +18,5 @@ ESTA..............
 <button class="{{color2}}"></button>
 <p> Counter: <input type="text" id="variable"><button (click)="convertir()">Convertir</button></p>
 
+<!-- NO BORRES ESTA MADRE DE ABAJO  -->
 <router-outlet></router-outlet>
